--- a/src/app.css
+++ b/src/app.css
@@ -198,6 +198,11 @@ main {
   margin: 0 auto;
 }
 
+a {
+  color: var(--purple600);
+  font-weight: 500;
+}
+
 @media only screen and (max-width: 1024px) {
   body {
     font-size: 16px;
