Add hash to background image filenames

--- a/src/app.css
+++ b/src/app.css
@@ -194,7 +194,7 @@ body {
   color: var(--foreground);
   min-height: 100dvh;
   background-color: var(--background);
-  background-image: url(/arcade-background.png);
+  background-image: url(/arcade-background-35b4493dd2db337e11ced3406c5867f8.png);
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
