Initial doodledash setup, canvas

--- a/src/app.css
+++ b/src/app.css
@@ -198,6 +198,7 @@ body {
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
+  background-attachment: fixed;
   image-rendering: pixelated;
   font-family: 'Apple II Pro', sans-serif;
   font-size: 18px;
