--- a/src/main.scss
+++ b/src/main.scss
@@ -105,6 +105,18 @@ html {
   image-rendering: pixelated;
 }
 
+@media only screen and (max-width: 1024px) {
+  html {
+    font-size: 18px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  html {
+    font-size: 16px;
+  }
+}
+
 body,
 main {
   min-height: 100vh;
