--- a/src/main.scss
+++ b/src/main.scss
@@ -117,6 +117,12 @@ html {
   }
 }
 
+@media only screen and (max-width: 480px) {
+  html {
+    font-size: 14px;
+  }
+}
+
 body,
 main {
   min-height: 100vh;
