Add rule to fix html height to prevent background image scaling

--- a/src/main.scss
+++ b/src/main.scss
@@ -99,6 +99,7 @@ $family-secondary: $family-monospace;
 }
 
 html {
+  height: 100vh;
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
